--- a/STM32/LED/.vscode/tasks.json
+++ b/STM32/LED/.vscode/tasks.json
@@ -1,37 +1,39 @@
 {
-	"version": "2.0.0",
-	"tasks": [
-		{
-			"type": "shell",
-			"label": "Build",
-			"command": "make",
-			"args": [
-			]
-		},
-		{
-			"type": "shell",
-			"label": "Update",
-			"command": "openocd",
-			"group": {
-				"kind": "build",
-				"isDefault": true
-			},
-			"args": [
-				"-f",
-				"C:/openocd/scripts/interface/stlink-v2.cfg",
-				"-f",
-				"C:/openocd/scripts/target/stm32f1x.cfg",
-				"-c",
-				"program build/${workspaceFolderBasename}.elf verify reset exit"
-			]
-
-		},
-		{
-			"label": "Build & Update",
-			"dependsOn":[
-				"Build",
-				"Update"
-			]
-		}
-	]
+    // See https://go.microsoft.com/fwlink/?LinkId=733558
+    // for the documentation about the tasks.json format
+    "version": "2.0.0",
+    "tasks": [
+        {
+            "label": "close openocd",
+            "type": "shell",
+            "command": "taskkill /f /im openocd.exe",
+            
+        },
+        {
+            "label": "build",
+            "type": "shell",
+            "command": "make",
+            
+        },
+        {
+            "label": "Upload",
+            "type": "shell",
+            "command": "openocd",
+            "args": [
+                "-f",
+                "C:/openocd/scripts/interface/stlink-v2.cfg",
+                "-f",
+                "C:/openocd/scripts/target/stm32f1x.cfg",
+                "-c",
+                "program build/${workspaceFolderBasename}.elf verify reset exit"
+            ],
+            "dependsOn":["build"]
+        },
+        {
+            "label": "run openocd",
+            "type": "shell",
+            "command":"./runopenocd.bat",
+            "dependsOn":["Upload"]
+        },
+    ]
 }
